[workspace]
members = ["crates/*"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "bevy_eventlistener"
version = "0.6.1"
edition = "2021"
description = "Event listeners and callbacks for bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aevyrie/bevy_eventlistener"
keywords = ["gamedev", "bevy", "eventlistener", "callbacks"]
categories = ["game-engines", "rendering"]

[dependencies]
bevy_eventlistener_core = { path = "crates/bevy_eventlistener_core", version = "0.6.1" }
bevy_eventlistener_derive = { path = "crates/bevy_eventlistener_derive", version = "0.6.1" }

[dev-dependencies]
bevy = { git = 'https://github.com/ickshonpe/bevy/', rev = 'eff47e6d25e56d747df45af4ba33e9f160efe87d', default-features = false, features = [
    "bevy_winit",
    "x11",
] }
rand = "0.8"
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false
