[package]
name = "bevy_eventlistener_core"
version = "0.6.1"
edition = "2021"
description = "Event listeners and callbacks for bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aevyrie/bevy_eventlistener"
keywords = ["gamedev", "bevy", "eventlistener", "callbacks"]
categories = ["game-engines", "rendering"]

[dependencies]
bevy_ecs = { git = 'https://github.com/ickshonpe/bevy/', rev = '655da808728d14e8bb025b246242d15b5ba6f505' }
bevy_app = { git = 'https://github.com/ickshonpe/bevy/', rev = '655da808728d14e8bb025b246242d15b5ba6f505' }
bevy_utils = { git = 'https://github.com/ickshonpe/bevy/', rev = '655da808728d14e8bb025b246242d15b5ba6f505' }
bevy_hierarchy = { git = 'https://github.com/ickshonpe/bevy/', rev = '655da808728d14e8bb025b246242d15b5ba6f505' }

[features]
default = ["trace"]
trace = []
