[package]
name = "bevy_eventlistener_core"
version = "0.6.1"
edition = "2021"
description = "Event listeners and callbacks for bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aevyrie/bevy_eventlistener"
keywords = ["gamedev", "bevy", "eventlistener", "callbacks"]
categories = ["game-engines", "rendering"]

[dependencies]
bevy_ecs = { git = 'https://github.com/ickshonpe/bevy/', rev = 'eff47e6d25e56d747df45af4ba33e9f160efe87d' }
bevy_app = { git = 'https://github.com/ickshonpe/bevy/', rev = 'eff47e6d25e56d747df45af4ba33e9f160efe87d' }
bevy_utils = { git = 'https://github.com/ickshonpe/bevy/', rev = 'eff47e6d25e56d747df45af4ba33e9f160efe87d' }
bevy_hierarchy = { git = 'https://github.com/ickshonpe/bevy/', rev = 'eff47e6d25e56d747df45af4ba33e9f160efe87d' }

[features]
default = ["trace"]
trace = []
